manifests/k8-backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdu-evac-backend
  name: sdu-evac-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sdu-evac-backend
  template:
    metadata:
      labels:
        app: sdu-evac-backend
    spec:
      containers:
      - image: fujam20/sdu-evac-backend:latest
        name: sdu-evac-backend
        livenessProbe:
            httpGet:
                path: /health
                port: 80
        readinessProbe:
            httpGet:
                path: /health
                port: 80
        resources:
          # You must specify requests for CPU to autoscale
          # based on CPU utilization
          requests:
            cpu: "20m"
