manifests/redis_sentinel_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: redis-rs
  name: redis-sentinel
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis
      redis-sentinel: "true"
  serviceName: redis-sentinel
  template:
    metadata:
      labels:
        app: redis
        name: redis-sentinel
        redis-sentinel: "true"
        role: sentinel
    spec:
      containers:
      - name: sentinel
        image: k8s.gcr.io/redis:v1
        ports:
          - containerPort: 26379
        resources:
          requests:
            memory: "128Mi"
            cpu: "5m"
          limits:
            memory: "512Mi"
            cpu: "500m"
