manifests/redis_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: redis-rs
  name: redis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis
  serviceName: redis-master
  template:
    metadata:
      labels:
        app: redis
        name: redis
        role: master
    spec:
      containers:
      - name: redis
        image: k8s.gcr.io/redis:v1
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "0.1"
        volumeMounts:
        - name: data
          mountPath: /redis-master-data
        resources:
          requests:
            memory: "128Mi"
            cpu: "5m"
          limits:
            memory: "512Mi"
            cpu: "500m"
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        volume.beta.kubernetes.io/storage-class: "slow"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
