manifests/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sdu-evac-backend
  name: sdu-evac-backend
spec:
  ports:
  - name: 80-80
    port: 443
    protocol: TCP
    targetPort: 80
  selector:
    app: sdu-evac-backend
  type: LoadBalancer
