manifests/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sdu-evac-frontend
  name: sdu-evac-frontend
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sdu-evac-frontend
  type: LoadBalancer
