manifests/k8-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sdu-evac-backend
  name: sdu-evac-backend
  annotations: 
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "http-hc-config"}'
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sdu-evac-backend
  type: NodePort
