manifests/proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sdu-evac-frontend
  name: sdu-evac-frontend
spec:
  ports:
  - name: 443-443
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: sdu-evac-frontend
  type: clusterIP
