manifests/redis_sentinel_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sentinel
    role: service
  namespace: redis-rs
  name: redis-sentinel
spec:
  type: ClusterIP
  ports:
    - port: 26379
      targetPort: 26379
  selector:
    redis-sentinel: "true"
