manifests/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: master
    role: service
  namespace: redis-rs
  name: redis-master
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    role: master
